# football-prediction-crawler

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  daily-inspection.yml  release.yml
configs/: sources.example.yaml
configs/grafana/: crawler-overview.json
configs/prometheus/: alerts.yml
docs/operations/: backup-recovery.md  daily-inspection.md  deployment.md  observability.md  pre-release-acceptance.md  source-approval-intake.md
docs/sources/: sporttery_zqspf.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260711_01_create_collection_schema.py  (+2 more)
scripts/: backup_local_postgres.ps1  install_edge_worker_task.ps1  install_local_backup_task.ps1  open_edge_profile.ps1  restore_local_postgres.ps1  run_browser_worker.ps1  run_p8_local_reliability.ps1  start_edge_worker_supervisor.ps1  verify_backup_security.ps1  verify_edge_runtime.ps1
src/: Dockerfile
tests/: test_adapters.py  test_alerts.py  test_backup_scripts.py  test_browser_artifacts.py  test_browser_runtime.py  test_browser_session.py  test_browser_session_cli.py  test_browser_tasks.py  test_ci_contract.py  test_config.py  test_database.py  test_demo_api.py  test_failure_snapshots.py  test_host_operations_scripts.py  test_inspection.py  test_locking.py  test_metrics.py  test_mock_server.py  test_observability.py  test_operations.py  test_p8_pre_release.py  test_package.py  test_queueing.py  test_resilience.py  test_scheduler.py  test_skill_contract.py
(+59 files in other folders)
